<resources>
    <string name="app_name">Tic Tac Toe By Veraclins</string>
    <string name="score1">0</string>
    <string name="score2">0</string>
    <string name="player_2">Player 2</string>
    <string name="change_board">Change Board</string>
    <string name="reset_game">Reset Game</string>
    <string name="change_mode">Change Mode</string>
    <string name="player_1">Player 1</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="two_player">Two Players</string>
    <string name="single_player">Single Player</string>
    <string name="select_board">Select Board</string>
    <string name="_3_x_3_board">3 X 3 Board</string>
    <string name="_5_x_5_board">5 X 5 Board</string>
    <string name="player_turn">Player 1 Turn</string>
    <string name="computer_win_text">Computer wins this round! Try again!</string>
    <string name="human_win_text">Good job!   You win this round!   Let\'s go again!!</string>
    <string name="select_o">O</string>
    <string name="select_x">X</string>
    <string name="select_marker">Select Marker</string>
    <string name="image_description">Toast Image</string>
</resources>
