<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#330000"
        tools:context="com.example.android.tictactoe.SelectBoard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="#ffffff"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_board"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="30sp"
                android:textColor="#ffF999"/>

            <Button
                android:id="@+id/_3_x_3_board"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/_3_x_3_board"
                android:textSize="30sp"
                android:onClick="select3by3Board"
                android:background="@color/button_background"
                android:padding="10dp"/>
            <Button
                android:id="@+id/_5_x_5_board"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/_5_x_5_board"
                android:textSize="30sp"
                android:onClick="select5by5Board"
                android:background="@color/button_background"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>
