<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#330000"
    tools:context="com.example.android.tictactoe.Select3x3Board">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/text_p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/player_1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/text_score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score1"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap">
            <TextView
                android:id="@+id/text_score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score2"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"/>

            <TextView
                android:id="@+id/text_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/player_2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"/>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/text_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/player_turn"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>

        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>
        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <Button
            android:id="@+id/button_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>

        <Button
            android:id="@+id/button_11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>
        <Button
            android:id="@+id/button_12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <Button
            android:id="@+id/button_20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>

        <Button
            android:id="@+id/button_21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>
        <Button
            android:id="@+id/button_22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="resetGame"
        android:text="@string/reset_game"/>

</LinearLayout>